--- a/petition.html
+++ b/petition.html
@@ -54,7 +54,7 @@
 		{% endautoescape %}
 		</div>
 	{% else %}
-		<form id="action-form" class="c4 ct7_5 cm10 c-wide form-style-labelabove ak-form action_form margin-top-none" name="act" method="POST" action="/act/" accept-charset="utf-8">
+		<form id="action-form" class="c4 ct7_5 cm10 c-wide form-style-labelabove ak-form action_form margin-top-none text-black" name="act" method="POST" action="/act/" accept-charset="utf-8">
 		{% autoescape off %}
 			{% if page.custom_fields.form_text_above_form %}
 				{{ page.custom_fields.form_text_above_form }}
