Add in the right text-color for text

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -56,7 +56,7 @@
   {% endif %}
 {% endif %}
 
-<div class="general-privacy-notice text-small2">
+<div class="general-privacy-notice text-small2 text-white">
 {% if page.custom_fields.privacy_default_notice %}
 	{{ page.custom_fields.privacy_default_notice }}
 {% else %}
