--- a/privacy.html
+++ b/privacy.html
@@ -42,7 +42,7 @@
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
-    <p id="ak-fieldbox-privacy_notice" class="text-small">{{pt.notice|safe}}</p>
+    <p id="ak-fieldbox-privacy_notice" class="text-small text-white">{{pt.notice|safe}}</p>
   {% endif %}
 
   {% if pt.radio_optin and pt.radio_optout %}
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div id="really-opt-out" class="text-small bg-dkgray-trans padding-tiny" style="display: none;">
+    <div id="really-opt-out" class="text-small bg-dkgray-trans padding-tiny text-whote" style="display: none;">
       <p>{% filter ak_text:"really_optout" %}Are you sure? Email is how the global climate movement is able to stay organised. You can always unsubscribe.{% endfilter %}</p>
       <p><label for="privacy_optin" class="button button-small button-secondary bg-teal">{% filter ak_text:"really_optout_button" %}Yes, keep me involved{% endfilter %}</label></p>
     </div>
