--- a/privacy.html
+++ b/privacy.html
@@ -55,7 +55,7 @@
       <input type="hidden" name="privacy_optout_skip_confirmation" value="1">
     {% endif %}
 
-    <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio-group text-lineheight-small text-small">
+    <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio-group text-lineheight-small text-small text-white">
       <div class="input-radio">
         <input type="radio" name="privacy" id="privacy_optin" value="{{pt.radio_optin_hash}}">
         <label for="privacy_optin">{{pt.radio_optin|safe}}</label>
@@ -90,7 +90,7 @@
 
 	{% if page.custom_fields.form_include_partner %}
 	{% if page.custom_fields.form_include_partner_intro_text %}<p id="ak-fieldbox-privacy_notice" class="text-small">{{ page.custom_fields.form_include_partner_intro_text }}</p>{% endif %}
-	<div id="partner-share-{{ page.custom_fields.form_include_partner|slugify }}" class="partner-signup margin-bottom-normal input-radio-group text-small required">
+	<div id="partner-share-{{ page.custom_fields.form_include_partner|slugify }}" class="partner-signup margin-bottom-normal input-radio-group text-small text-white required">
 	      <div class="input-radio">
 	        <input type="radio" name="partner-{{ page.custom_fields.form_include_partner|slugify }}" id="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin" value="yes">
 	        <label for="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin">Yes I want to receive email updates from {{ page.custom_fields.form_include_partner }}.</label>
