Add in the right text-color for text

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -18,7 +18,7 @@
  </div>
 </div>
 
-<div id="unknown_user" class="user-form ak-errs-below form-style-labelabove">
+<div id="unknown_user" class="user-form ak-errs-below form-style-labelabove text-black">
  {% include "./user_form.html" %}
  <div style="display: none">
   <input name="user_honey">
