--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -291,7 +291,6 @@
 {% endblock %}
 
 {% block script_additions %}
-<script src="https://s3.amazonaws.com/s3.350.org/scripts/truncate.min.js"></script>
 <script type="text/javascript">
       $(document).ready(function() {
         // Set token
@@ -299,6 +298,7 @@
         fetch(`https://zaki-server.herokuapp.com/api/v1/auth`).then(response=>{
           if(response.ok){
             response.json().then(data=>{
+              console.log("Token gotten and set")
               localStorage.setItem("token", data.token);
             })
           } else {
