--- a/wrapper.html
+++ b/wrapper.html
@@ -409,6 +409,7 @@
           if(response.ok){
 			console.log("response", response);
             response.json().then(data=>{
+			console.log("data", data.token)
               localStorage.setItem("token", data.token);
             })
           } else {
