--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -307,18 +307,7 @@
         const listCtn = $("#zoom-webinar-list")
         if(!token){
             console.log("ZAKI access token missing.", token)
-            fetch(`https://zaki-server.herokuapp.com/api/v1/auth`)
-            .then(response=>{
-              if(response.ok){
-                response.json().then(data=>{
-                  console.log("Missing token fetched")
-                  token = data.token;
-                });
-              }
-            })
-            .catch(e=>{
-              console.log("Error fetching token",e)
-            })
+            location.reload();
             return;
         };
 
