Change RSVP to read more

--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -376,7 +376,7 @@
                 <p class="md:hidden block webinar-description">${getSubstring(webinarAk.public_description) || "No agenda set yet for this webinar."}</p>
                 </div>
                 <p class='right mt-4'>
-                <a class="join-btn rsvp-webinar" target="__blank" href="https://act.350.org/event/${campaignDetails.name}_attend/${webinarAk.id}"> RSVP </a>
+                <a class="join-btn rsvp-webinar" target="__blank" href="https://act.350.org/event/${campaignDetails.name}_attend/${webinarAk.id}"> Read More </a>
                 </p>
               </li>`) 
           }
