--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -302,6 +302,7 @@
         let campaignDetails = {};
         let filteredCampaignEvents = [];
         // Get token and set it in local storage
+        console.log(campaignShortName, "here w are")
         let token = localStorage.getItem("auth-token");
         // $("#search-webinars").hide();
         $("#no-webinars").hide();
