--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -1,6 +1,10 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
+	<!-- Tailwind -->
+	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"/>
+
+	<!--End-->
 <style>
 #section-webinars {
   background-position: center center;
