Remove text-white to elements that do not require it

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -59,7 +59,7 @@
   {% endif %}
 {% endif %}
 
-<div class="general-privacy-notice text-small2 text-white">
+<div class="general-privacy-notice text-small2">
 {% if page.custom_fields.privacy_default_notice %}
 	{{ page.custom_fields.privacy_default_notice }}
 {% else %}
