--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -27,10 +27,8 @@
 </div>
 
 {% if page.custom_fields.form_privacy_show_optin != "do-not-show" %}
-<div class="text-white">
 
   {% include "./privacy.html" %}
-</div>
 {% endif %}
 
 {% if page.type != "Call" %}
@@ -74,7 +72,7 @@
 
 {% if page.custom_fields.form_opt_in %}
 <input type="hidden" name="opt_in" value="1">
-<div class="input-checkbox ak-userfield-checkbox-choice text-white">
+<div class="input-checkbox ak-userfield-checkbox-choice">
 	<label for="lists-checkbox">
 		<input id="lists-checkbox" class="checkbox" type="checkbox" name="lists" value="{{ page.list.id }}" checked> {% filter ak_text:"general_opt_in_label" %}Stay up to date with 350.org and the climate movement.{% endfilter %}
 	</label>
