--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -26,6 +26,13 @@
 
 </div>
 
+{% if page.custom_fields.form_show_gjrg_optins == "Y" %}
+<div class="text-white">
+
+  {% include "./user_gjrg_optins.html" %}
+</div>
+{% endif %}
+
 {% if page.custom_fields.form_privacy_show_optin != "do-not-show" %}
 <div class="text-white">
 
