Update links in the develop page

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -1,4 +1,9 @@
 {% comment %}You can optionally use this to replace known_user/unknown_user divs in your templates.{% endcomment %}
+<style>
+.general-privacy-notice p a {
+  color: #0f81e8!important;
+}
+</style>
 {% load actionkit_tags %}
 
 {% if page.custom_fields.form_short_toc %}
